# Tiny-HTTP-Server

./: CMakeLists.txt  GRADED.md  README.md  httpd.conf
http_src/: file_util.c  file_util.h  http_codes.c  http_codes.h  http_methods.c  http_methods.h  http_request.c  http_request.h  http_server.c  http_server.h  http_util.c  http_util.h  media_util.c  media_util.h  network_util.c  network_util.h  properties.c  properties.h  string_util.c  string_util.h  time_util.c  time_util.h  varray.c  varray.h
